test/handle-manager/handle-manager-doi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dissco-handle-manager-doi
  labels:
    app: dissco-handle-manager-doi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dissco-handle-manager-doi
  template:
    metadata:
      labels:
        app: dissco-handle-manager-doi
        language: java
    spec:
      automountServiceAccountToken: false
      containers:
        - name: dissco-handle-manager-doi
          image: public.ecr.aws/dissco/handle-manager
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          env:
            - name: spring.profiles.active
              value: doi
            - name: spring.security.oauth2.resourceserver.jwt.issuer-uri
              value: https://login-demo.dissco.eu/auth/realms/dissco
            - name: spring.security.oauth2.authorizationserver.endpoint.jwk-set-uri
              value: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
            - name: application.ui-url
              value: https://dev.dissco.tech
            - name: application.api-url
              value: ${application.ui-url}/api
            - name: application.orchestration-ui
              value: https://dev-orchestration.dissco.tech/api/v1
            - name: application.orchestration-api
              value: https://dev-orchestration.dissco.tech/api/v1
            - name: application.maxHandles
              value: '1000'
            - name: springdoc.swagger-ui.path
              value: /docs/swagger-ui.html
            - name: springdoc.api-docs.path
              value: /docs/api-docs
            - name: springdoc.swagger-ui.config-url
              value: /doi-manager/api/pids/v1/docs/api-docs/swagger-config
            - name: springdoc.swagger-ui.url
              value: /doi-manager/api/pids/v1/docs/api-docs
            - name: spring.datasource.url
              value: jdbc:postgresql://terraform-20230822143945532600000001.cbppwfnjypll.eu-west-2.rds.amazonaws.com:5432/dissco
            - name: spring.rabbitmq.password
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: rabbitmq-password
            - name: spring.rabbitmq.username
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: rabbitmq-username
            - name: spring.rabbitmq.host
              value: rabbitmq-cluster.rabbitmq.svc.cluster.local
            - name: spring.datasource.username
              valueFrom:
                secretKeyRef:
                  name: db-secrets
                  key: db-username
            - name: spring.datasource.password
              valueFrom:
                secretKeyRef:
                  name: db-secrets
                  key: db-password
            - name: application.prefix
              value: TEST
            - name: caching.spring.ttl
              value: PT6H
            - name: mongo.database
              value: handle
            - name: mongo.connection-string
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: mongodb-connection
          resources:
            requests:
              memory: "500Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 45
            failureThreshold: 2
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
