test/handle-manager/handle-manager-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: dissco-handle-manager-service-handle
spec:
  selector:
    app: dissco-handle-manager-handle
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dissco-handle-manager-handle-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dev.dissco.tech`) && PathPrefix(`/handle-manager/api/pids/v1`)
      kind: Rule
      services:
        - name: dissco-handle-manager-service-handle
          namespace: default
          port: 8080
      middlewares:
        - name: dissco-handle-manager-handle-stripprefix
        - name: dissco-handle-manager-cors-headers
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dissco-handle-manager-handle-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /handle-manager/api/pids/v1
    forceSlash: false
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dissco-handle-manager-cors-headers
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
    accessControlAllowHeaders:
      - "*"
    accessControlAllowOriginList:
      - "*"
    accessControlMaxAge: 100
    addVaryHeader: true
